Integration with google vision api and receipt edition and photo upload
