# props/apiRequests.ts
@@ -1,4 +1,4 @@
-import {Asserts, date, object, setLocale, string, TypeOf} from "yup";
+import {Asserts, date, mixed, number, object, setLocale, string, TypeOf} from "yup";
 import {yupLocalization} from "./messages";
 
 setLocale(yupLocalization);
@@ -10,5 +10,13 @@ const receiptRequest = {
     purchaseDate: date().nullable().optional()
 };
 export const receiptRequestSchema = object(receiptRequest);
-
 export interface ReceiptRequest extends Asserts<typeof receiptRequestSchema> {}
+
+export const photoRequestSchema = object({
+    caption: string().nullable().optional().max(255),
+    text: string().nullable().optional(),
+    receiptId: number().defined()
+});
+export interface PhotoRequest extends Asserts<typeof photoRequestSchema> {}
+
+
